test/Sema/diag_metatype_cast_to_reference_no_objc.code
// RUN: %target-language-frontend -disable-objc-interop -typecheck %s -verify

class C {}

fn test(c: AnyClass) {
  immutable _: AnyObject = c // expected-error {{value of type 'AnyClass' (aka 'any AnyObject.Type') expected to be instance of class or class-constrained type}}
  immutable _: AnyObject = C.this // expected-error {{value of type 'C.Type' expected to be instance of class or class-constrained type}}
}
